--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
       <div class="col-md-6">
         <div class="card project-card">
           <h5>Otomasyon Sistemi</h5>
-          <p>C# ve MS SQL ile geliştirilen bir iş takip otomasyonu.</p>
+          <p>C# ve MySQL ile geliştirilen bir iş takip otomasyonu.</p>
           <a href="coming-soon.html"><button class="btn details-btn">Detaylar</button></a>
         </div>
       </div>
       <div class="col-md-6">
         <div class="card project-card">
           <h5>Web Tabanlı Arıcılık</h5>
-          <p>HTML, CSS ve Flask ile geliştirilmiş bir arıcılık destek platformu.</p>
+          <p>HTML, CSS, Python ve Flask ile geliştirilmiş bir arıcılık destek platformu.</p>
           <a href="coming-soon.html"><button class="btn details-btn">Detaylar</button></a>
         </div>
       </div>
